feat: Vertex info passed into rust on prepare