@@ -83,6 +83,7 @@ import com.radixdlt.serialization.Serialization;
 import com.radixdlt.statecomputer.RustStateComputer;
 import com.radixdlt.statecomputer.commit.CommitRequest;
 import com.radixdlt.statecomputer.commit.PrepareRequest;
+import com.radixdlt.statecomputer.commit.PreviousVertex;
 import com.radixdlt.transaction.TransactionBuilder;
 import com.radixdlt.transactions.RawLedgerTransaction;
 import com.radixdlt.transactions.RawNotarizedTransaction;
@@ -173,16 +174,28 @@ public final class REv2StateComputer implements StateComputerLedger.StateCompute
 
   @Override
   public StateComputerLedger.StateComputerResult prepare(
-      List<StateComputerLedger.ExecutedTransaction> previous,
+      List<ExecutedVertex> previousVertices,
       List<RawNotarizedTransaction> proposedTransactions,
       RoundDetails roundDetails) {
-    var previousTransactions =
-        previous.stream()
-            .map(StateComputerLedger.ExecutedTransaction::transaction)
-            .collect(Collectors.toList());
+    var mappedPreviousVertices =
+        previousVertices.stream()
+            .map(
+                v ->
+                    new PreviousVertex(
+                        v.successfulTransactions()
+                            .map(StateComputerLedger.ExecutedTransaction::transaction)
+                            .toList(),
+                        v.vertex()
+                            .getParentHeader()
+                            .getLedgerHeader()
+                            .getAccumulatorState()
+                            .getAccumulatorHash()
+                            .asBytes(),
+                        v.getLedgerHeader().getAccumulatorState().getAccumulatorHash().asBytes()))
+            .toList();
     var prepareRequest =
         new PrepareRequest(
-            previousTransactions,
+            mappedPreviousVertices,
             proposedTransactions,
             UInt64.fromNonNegativeLong(roundDetails.epoch()),
             UInt64.fromNonNegativeLong(roundDetails.roundNumber()),
